# silicritter

./: .gitignore  CLAUDE.md  COPYRIGHT  DECISIONS.md  DISCOVERIES.md  HANDOFF-2026-04-24.md  HANDOFF-2026-04-26.md  LICENSE  README.md  REFERENCES.md  SESSION-HANDOFF.md  perf_history.md  pyproject.toml
.claude/: settings.json  settings.local.json
colab/: phase2_long_t.ipynb
experiments/: block10_step13_ei_n100.py  block11_cppn_n20.py  block11b_genome_analysis.py  block12_fgn_n100.py  block13_stdp_n100.py  block9_step10_n500.py  overnight_batch.py  phase2_step10_long_t.py  step02_throughput.py  step03_slotpool_throughput.py  step04_plastic_throughput.py  step05_ga_target_rate.py  step05b_adrenaline_comparison.py  step06_structural_release.py  step07_paired_signal_following.py  step07b_handwired_control.py  step07c_handwired_n256.py  step07e_paired_cppn_n256.py  step09_handwired_n256_ei.py  step10_closedloop_adrenaline.py  step11_cppn_closedloop.py  step12_tonic_sweep.py  step13_ei_perturbation.py  step14_fgn_stimulus.py  step15_wk_floor_comparison.py  step16_stdp_learning.py  step17_structural_growth.py
overnight_results/: OVERNIGHT_PLAN.md  block10_step13_ei_n100.csv  block11_cppn_n20.csv  block11b_eval_seeds.csv  block11b_genome_stats.csv  block11b_genomes.pkl  block12_fgn_n100.csv  block13_stdp_n100.csv  block1_step17_factorial.csv  block2_acquisition_probability.csv  block3_long_training.csv  block4_step16_multiseed.csv  block5_best_config_confirm.csv  block6_strong_op_confirm.csv  block7_long_duration_confirm.csv  block8_stdp_regression_bisect.csv  block9_step10_n500.csv  phase2_step10_long_t.csv
src/silicritter/: __init__.py  closedloop.py  cppn.py  fracnoise.py  ga.py  lif.py  paired.py  plasticity.py  slotpool.py  structural.py  wk.py
tests/: test_block10_step13.py  test_block11_cppn.py  test_block11b_genome_analysis.py  test_block12_fgn_n100.py  test_block13_stdp_n100.py  test_block9_long_t.py  test_closedloop.py  test_cppn.py  test_fracnoise.py  test_ga.py  test_lif.py  test_overnight_batch_callers.py  test_paired.py  test_phase2_long_t.py  test_plasticity.py  test_slotpool.py  test_step16_describe_pool.py  test_step17_acq_prob.py  test_structural.py  test_training_scan_memory.py  test_wk.py
